worksへブログの追加

--- a/index.html
+++ b/index.html
@@ -247,6 +247,14 @@
             また、友人の結婚式用の動画制作を何度か経験しており、納期を意識した動画編集も可能です。</p>
         </div>
       </li>
+      <li class="skill__list">
+        <img src="img/wordpress.webp" alt="wordpress" class="skill__list-img">
+        <div>
+          <h2>wordpress</h2>
+          <p>趣味でブログを始めました。<br>
+            まだまだ理解が浅いですが、今後勉強を進めていくつもりです。</p>
+        </div>
+      </li>
     </ul>
   </section>
 
@@ -260,138 +268,136 @@
         <a href="https://shibawanko0202.github.io/monte/">
           <img src="img/もんてくらい.webp" alt="" class="works__list-img">
         </a>
-          <h2 class="monte">
-            <span>
-              住宅型有料老人ホーム<br>
-              <img src="img/もんてくらい(ロゴタイプ)(圧縮済).webp" alt="もんてくらい" class="works__monte-logo">
-            </span>
-          </h2>
-          <dl class="works__dl">
-            <dt class="works__dt">概要</dt>
-            <dd class="works__dd">
-              知人が経営する老人ホームのwebサイトです。<br>
-              デプロイは準備が出来しだい先方がするとの事なので、現状は報告用のgithubページです。
-            </dd>
-            <dt class="works__dt">工数</dt>
-            <dd class="works__dd">25日</dd>
-            <dt class="works__dt">担当範囲</dt>
-            <dd class="works__dd">
-              <ul class="works__monte-lists">
-                <li>サイトデザイン</li>
-                <li>使用写真の選定</li>
-                <li>画像の加工</li>
-                <li>文章の加筆修正</li>
-                <li>記載事項の提案</li>
-                <li>コーディング</li>
-              </ul>
-            </dd>
-            <dt class="works__dt">こだわりポイント</dt>
-            <dd class="works__dd">
-              サイトを閲覧する年齢層(老人ホームの利用者層とその家族)を考え、できるだけ分かりやすくスクロールだけで完結するデザインにしました。
-            </dd>
-            <dt class="works__dt">苦労した点</dt>
-            <dd class="works__dd">
-              「使用する画像が決まっておらず、良い写真が撮れたら変更したい」という事だったので、現状持っている画像(200枚以上)を送ってもらいそこから使用する画像を選定し、レタッチ(露出の調整、歪曲収差の補正、不要なものの削除等)してから使用した為、とても時間がかかりました。
-            </dd>
-            <dt class="works__dt">今後の課題</dt>
-            <dd class="works__dd">
-              いずれはブログやお知らせも追加したいとのことなので、CMSの導入を考えています。
-            </dd>
-          </dl>
+        <h2 class="monte">
+          <span>
+            住宅型有料老人ホーム<br>
+            <img src="img/もんてくらい(ロゴタイプ)(圧縮済).webp" alt="もんてくらい" class="works__monte-logo">
+          </span>
+        </h2>
+        <dl class="works__dl">
+          <dt class="works__dt">概要</dt>
+          <dd class="works__dd">
+            知人が経営する老人ホームのwebサイトです。<br>
+            デプロイは準備が出来しだい先方がするとの事なので、現状は報告用のgithubページです。
+          </dd>
+          <dt class="works__dt">工数</dt>
+          <dd class="works__dd">25日</dd>
+          <dt class="works__dt">担当範囲</dt>
+          <dd class="works__dd">
+            <ul class="works__dd-lists">
+              <li>サイトデザイン</li>
+              <li>使用写真の選定</li>
+              <li>画像の加工</li>
+              <li>文章の加筆修正</li>
+              <li>記載事項の提案</li>
+              <li>コーディング</li>
+            </ul>
+          </dd>
+          <dt class="works__dt">こだわりポイント</dt>
+          <dd class="works__dd">
+            サイトを閲覧する年齢層(老人ホームの利用者層とその家族)を考え、できるだけ分かりやすくスクロールだけで完結するデザインにしました。
+          </dd>
+          <dt class="works__dt">苦労した点</dt>
+          <dd class="works__dd">
+            「使用する画像が決まっておらず、良い写真が撮れたら変更したい」という事だったので、現状持っている画像(200枚以上)を送ってもらいそこから使用する画像を選定し、レタッチ(露出の調整、歪曲収差の補正、不要なものの削除等)してから使用した為、とても時間がかかりました。
+          </dd>
+          <dt class="works__dt">今後の課題</dt>
+          <dd class="works__dd">
+            いずれはブログやお知らせも追加したいとのことなので、CMSの導入を考えています。
+          </dd>
+        </dl>
       </li>
       <li class="works__list">
         <a href="https://shibawanko0202.github.io/sokudokubunko/">
           <img src="img/強制速読文庫.webp" alt="" class="works__list-img">
         </a>
-          <h2 class="sokudoku">速読強要文庫</h2>
-          <dl class="works__dl">
-            <dt class="works__dt">概要</dt>
-            <dd class="works__dd">
-              人間が文章を読む際にもっとも時間をかけている視線の移動を無くすことで、速読が出来るようにしたwebアプリです。
-            </dd>
-            <dt class="works__dt">工数</dt>
-            <dd class="works__dd">10日</dd>
-            <dt class="works__dt">こだわりポイント</dt>
-            <dd class="works__dd">
-              文庫本(古本)のような見た目とアニメーションにこだわりました。<br>
-              また、難しい言葉が多いのでホバーで意味や読みを表示できるようにしました。
-            </dd>
-            <dt class="works__dt">苦労した点</dt>
-            <dd class="works__dd">
-              青空文庫(著作権の消滅した文学作品を載せているwebサイト)から作品を選ぶのに悩みました。<br>
-              本当は冒頭が有名な「雪国」も掲載したかったのですが、著者が比較的長寿だった為ギリギリ著作権が残っていました。
-            </dd>
-            <dt class="works__dt">今後の課題</dt>
-            <dd class="works__dd">
-              現在は手入力で文章を配列に変換しており非常に手間がかかる為、形態素解析ソフト(kuromoji.jsなど)を使用しての自動変換と、文字送り速度の変更コントローラーを追加したいと考えています。
-            </dd>
-          </dl>
+        <h2 class="sokudoku">速読強要文庫</h2>
+        <dl class="works__dl">
+          <dt class="works__dt">概要</dt>
+          <dd class="works__dd">
+            人間が文章を読む際にもっとも時間をかけている視線の移動を無くすことで、速読が出来るようにしたwebアプリです。
+          </dd>
+          <dt class="works__dt">工数</dt>
+          <dd class="works__dd">10日</dd>
+          <dt class="works__dt">こだわりポイント</dt>
+          <dd class="works__dd">
+            文庫本(古本)のような見た目とアニメーションにこだわりました。<br>
+            また、難しい言葉が多いのでホバーで意味や読みを表示できるようにしました。
+          </dd>
+          <dt class="works__dt">苦労した点</dt>
+          <dd class="works__dd">
+            青空文庫(著作権の消滅した文学作品を載せているwebサイト)から作品を選ぶのに悩みました。<br>
+            本当は冒頭が有名な「雪国」も掲載したかったのですが、著者が比較的長寿だった為ギリギリ著作権が残っていました。
+          </dd>
+          <dt class="works__dt">今後の課題</dt>
+          <dd class="works__dd">
+            現在は手入力で文章を配列に変換しており非常に手間がかかる為、形態素解析ソフト(kuromoji.jsなど)を使用しての自動変換と、文字送り速度の変更コントローラーを追加したいと考えています。
+          </dd>
+        </dl>
       </li>
       <li class="works__list">
         <a href="https://shibawanko0202.github.io/speedTyping/">
           <img src="img/typyng.webp" alt="" class="works__list-img">
         </a>
-        <div>
-          <h2 class="typing">typing!</h2>
-          <dl class="works__dl">
-            <dt class="works__dt">概要</dt>
-            <dd class="works__dd">タイピングゲームです。<br>
-              html/css/javascriptで頻出する用語を練習でき、リアルタイムでタイピング精度を見ることができます。<br>
-              また、苦手なキーが一目で分かるようjavascriptで動きを付けました。
-            </dd>
-            <dt class="works__dt">工数</dt>
-            <dd class="works__dd">14日</dd>
-            <dt class="works__dt">こだわりポイント</dt>
-            <dd class="works__dd">
-              気持のいいUIを目指してアニメーションを実装しました。<br>
-              ミスした際に現れるバルーンはクリックで割ることもできます。
-            </dd>
-            <dt class="works__dt">苦労した点</dt>
-            <dd class="works__dd">
-              ミスしたキーのバルーンの出現がランダムな為、問題文に被って出現する事もありました。<br>
-              その対策として中心部分のみ除外する為に画面を4分割してランダムに選び、その中から更にランダムに位置を指定する方法をとっています。
-            </dd>
-            <dt class="works__dt">今後の課題</dt>
-            <dd class="works__dd">
-              問題(単語)の追加。日本語ver。<br>
-              ランキングの追加。<br>
-              苦手なキーの入った単語の出現率増加。<br>
-              などを考えています。
-            </dd>
-          </dl>
-        </div>
+        <h2 class="typing">typing!</h2>
+        <dl class="works__dl">
+          <dt class="works__dt">概要</dt>
+          <dd class="works__dd">タイピングゲームです。<br>
+            html/css/javascriptで頻出する用語を練習でき、リアルタイムでタイピング精度を見ることができます。<br>
+            また、苦手なキーが一目で分かるようjavascriptで動きを付けました。
+          </dd>
+          <dt class="works__dt">工数</dt>
+          <dd class="works__dd">14日</dd>
+          <dt class="works__dt">こだわりポイント</dt>
+          <dd class="works__dd">
+            気持のいいUIを目指してアニメーションを実装しました。<br>
+            ミスした際に現れるバルーンはクリックで割ることもできます。
+          </dd>
+          <dt class="works__dt">苦労した点</dt>
+          <dd class="works__dd">
+            ミスしたキーのバルーンの出現がランダムな為、問題文に被って出現する事もありました。<br>
+            その対策として中心部分のみ除外する為に画面を4分割してランダムに選び、その中から更にランダムに位置を指定する方法をとっています。
+          </dd>
+          <dt class="works__dt">今後の課題</dt>
+          <dd class="works__dd">
+            問題(単語)の追加。日本語ver。<br>
+            ランキングの追加。<br>
+            苦手なキーの入った単語の出現率増加。<br>
+            などを考えています。
+          </dd>
+        </dl>
       </li>
       <li class="works__list">
         <a href="https://shibawanko0202.github.io/monkeybord/">
           <img src="img/monkeybord.webp" alt="" class="works__list-img">
         </a>
-          <h2 class="monkeybord">
-            <span>
-              無限<span class="no">の</span>猿定理実験場
-            </span>
-          </h2>
-          <dl class="works__dl">
-            <dt class="works__dt">概要</dt>
-            <dd class="works__dd">
-              「無限の時間があれば、猿が無作為にキーボードを叩き続けれるといずれシェイクスピアの戯曲が完成する」という『無限の猿定理』の実証実験用アプリです。<br>
-              数文字の英単語でも滅茶苦茶時間がかかることが分かりますが。<br>
-              「apple」は(幸運にも)6時間程度で完成しました。
-            </dd>
-            <dt class="works__dt">工数</dt>
-            <dd class="works__dd">10日</dd>
-            <dt class="works__dt">こだわりポイント</dt>
-            <dd class="works__dd">
-              機能としてはシンプルなものなので、今回は配色やヘッダーの文字組み等にこだわってみました。
-            </dd>
-            <dt class="works__dt">苦労した点</dt>
-            <dd class="works__dd">
-              打鍵した文字を保持し続けると2万字程度からsetIntervalの速度が落ちる為必要以上に時間がかかるので、現在は一定数を越えると文字を破棄して速度を維持しています。
-            </dd>
-            <dt class="works__dt">今後の課題</dt>
-            <dd class="works__dd">
-              日本語への対応をしたいですが、実装しても現実的でない程打鍵に時間がかかるので保留・・・。
-            </dd>
-          </dl>
+        <h2 class="monkeybord">
+          <span>
+            無限<span class="no">の</span>猿定理実験場
+          </span>
+        </h2>
+        <dl class="works__dl">
+          <dt class="works__dt">概要</dt>
+          <dd class="works__dd">
+            「無限の時間があれば、猿が無作為にキーボードを叩き続けれるといずれシェイクスピアの戯曲が完成する」という『無限の猿定理』の実証実験用アプリです。<br>
+            数文字の英単語でも滅茶苦茶時間がかかることが分かりますが。<br>
+            「apple」は(幸運にも)6時間程度で完成しました。
+          </dd>
+          <dt class="works__dt">工数</dt>
+          <dd class="works__dd">10日</dd>
+          <dt class="works__dt">こだわりポイント</dt>
+          <dd class="works__dd">
+            機能としてはシンプルなものなので、今回は配色やヘッダーの文字組み等にこだわってみました。
+          </dd>
+          <dt class="works__dt">苦労した点</dt>
+          <dd class="works__dd">
+            打鍵した文字を保持し続けると2万字程度からsetIntervalの速度が落ちる為必要以上に時間がかかるので、現在は一定数を越えると文字を破棄して速度を維持しています。
+          </dd>
+          <dt class="works__dt">今後の課題</dt>
+          <dd class="works__dd">
+            日本語への対応をしたいですが、実装しても現実的でない程打鍵に時間がかかるので保留・・・。
+          </dd>
+        </dl>
       </li>
       <li class="works__list">
         <img src="img/シバタノポートフォリオ.webp" alt="" class="works__list-img">
@@ -419,6 +425,47 @@
               まだ一部のデザインがアールデコなだけなので、いずれはサイト全体をアールデコ的デザインで満たしたいと思っています。
             </dd>
           </dl>
+      </li>
+      <li class="works__list">
+        <a href="https://www.shibatano.jp/">
+          <img src="img/シバタノ備忘録.webp" alt="" class="works__list-img">
+        </a>
+        <h2 class="memorandum">
+          シバタノ備忘録
+        </h2>
+        <dl class="works__dl">
+          <dt class="works__dt">概要</dt>
+          <dd class="works__dd">ブログを開設しました。
+          </dd>
+          <dt class="works__dt">開設日</dt>
+          <dd class="works__dd works__dd--center">
+            2022/06/06<br>
+            年齢 : <span id="blog_day"></span>日
+          </dd>
+          <dt class="works__dt">開設経緯</dt>
+          <dd class="works__dd">
+            wordpressの勉強という理由もありますが、前々からブログには興味がありました。<br>
+            モノづくりをしていて「この情報は自分と同じ苦労をしている(きっといるであろう)どこかの誰かの為に、ネット上に残しておくべきだよな」と感じる事がたびたびあったからです。<br>
+            あと、いい感じに作れたものは誰かに自慢したいという気持ちもあります(笑)
+          </dd>
+          <dt class="works__dt">予定しているコンテンツ</dt>
+          <dd class="works__dd">
+            <ul class="works__dd-lists">
+              <li>web制作</li>
+              <li>DIY</li>
+              <li>映画</li>
+              <li>ロードバイク</li>
+              <li>カメラ</li>
+              <li>インテリア</li>
+              <li>一人暮らしtips</li>
+              <li>その他随筆</li>
+            </ul>
+          </dd>
+          <dt class="works__dt">今後の課題</dt>
+          <dd class="works__dd">
+            今はまだ元からあるサイトテーマを使用しているので、今後は自分でコードを書いて満足いくサイトに育てていくつもりです。
+          </dd>
+        </dl>
       </li>
     </ul>
   </section>
