もんてくらいのURL更新

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     </h1>
     <ul class="works__lists">
       <li class="works__list">
-        <a href="https://shibawanko0202.github.io/monte/">
+        <a href="http://x.gmobb.jp/montecrei/index.html">
           <img src="img/もんてくらい.webp" alt="" class="works__list-img">
         </a>
         <h2 class="monte">
@@ -278,7 +278,6 @@
           <dt class="works__dt">概要</dt>
           <dd class="works__dd">
             知人が経営する老人ホームのwebサイトです。<br>
-            デプロイは準備が出来しだい先方がするとの事なので、現状は報告用のgithubページです。
           </dd>
           <dt class="works__dt">工数</dt>
           <dd class="works__dd">25日</dd>
