--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <p>
       長崎県五島列島出身
     </p>
-    <p class="about__p-long">
+    <!-- <p class="about__p-long">
       自動車部品メーカーで半導体製造業務を10年以上経験しました。<br>
       その傍らで、業務で出来ない経験をするためにボランティア活動等(ゴミ拾い、イベント運営、水族館の解説、友人の結婚式二次会幹事など)を行っていました。
     </p>
@@ -143,7 +143,7 @@
     <p class="about__p-long">
       しかし自身の年齢やコロナによる情勢の変化でプライベートでの活動が減ったことなどで転職への気持が強まり、遅まきながら転職活動を始めました。<br>
       現在はweb制作に携わりたいと考え独学で勉強、転職活動中です。<br>
-    </p>
+    </p> -->
     <p>
       愛知県名古屋市在住
     </p>
@@ -151,7 +151,7 @@
       趣味 : 読書/映画観賞/カメラ/モノづくり
     </p>
     <dl class="about__faq-lists">
-      <div class="about__faq-list">
+      <!-- <div class="about__faq-list">
         <dt class="about__faq-dt">
           なぜ今さら転職したいのですか
           <div class="about__faq-wrapper">
@@ -181,7 +181,7 @@
             モノづくりやデザインの美しさ、合理性が好きな事と、PCが好きな事からweb制作を志望しています。
           </div>
         </dd>
-      </div>
+      </div> -->
       <div class="about__faq-list">
         <dt class="about__faq-dt">
           趣味のモノづくりとは具体的に何ですか
@@ -303,6 +303,48 @@
           <dt class="works__dt">今後の課題</dt>
           <dd class="works__dd">
             いずれはブログやお知らせも追加したいとのことなので、CMSの導入を考えています。
+          </dd>
+        </dl>
+      </li>
+      <li class="works__list">
+        <a href="http://x.gmobb.jp/yottecho/index.html">
+          <img src="img/よってちょ.webp" alt="" class="works__list-img">
+        </a>
+        <h2 class="yotte">
+          <span>
+            個別のニーズに応えるデイサービス<br>
+            <img src="img/よってちょ(ロゴタイプ).webp" alt="よってちょ" class="works__yotte-logo">
+          </span>
+        </h2>
+        <dl class="works__dl">
+          <dt class="works__dt">概要</dt>
+          <dd class="works__dd">
+            「もんてくらい」と同じ知人が経営するデイサービスのwebサイトです。<br>
+          </dd>
+          <dt class="works__dt">工数</dt>
+          <dd class="works__dd">20日</dd>
+          <dt class="works__dt">担当範囲</dt>
+          <dd class="works__dd">
+            <ul class="works__dd-lists">
+              <li>サイトデザイン</li>
+              <li>使用写真の選定</li>
+              <li>画像の加工</li>
+              <li>文章の加筆修正</li>
+              <li>記載事項の提案</li>
+              <li>コーディング</li>
+            </ul>
+          </dd>
+          <dt class="works__dt">こだわりポイント</dt>
+          <dd class="works__dd">
+            同じ会社の経営する施設なのでもんてくらいと統一感を意識しました。
+          </dd>
+          <dt class="works__dt">苦労した点</dt>
+          <dd class="works__dd">
+            料金体系がやや分かりづらいので、自分の介護度、支援度を選択すると合計金額が表示されるようにjsを組みました。
+          </dd>
+          <dt class="works__dt">今後の課題</dt>
+          <dd class="works__dd">
+            こちらもいずれはブログやお知らせも追加したいとのことなので、CMSの導入を考えています。
           </dd>
         </dl>
       </li>
