ブログのロゴを新調

--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
         <dd class="about__faq-dd">
           <div class="about__faq-dd-inner">
             本棚やテーブル、スピーカーなどの一般的な木工作業から、趣味の一つであるロードバイクの金属部品の切削研磨、メッキやロウ付け、友人や姉の結婚祝いで石粉粘土での立体造形などをしました。<br>
-            また、photoshopでの画像加工や動画編集などの経験もあります。
+            最近は3dプリンターという楽しいおもちゃを手に入れて楽しんでします。<br>
+            また、photoshopでの画像加工やAfter Effectsでの動画編集などの経験もあります。
           </div>
         </dd>
       </div>
@@ -472,7 +473,7 @@
           <img src="img/シバタノ備忘録.webp" alt="" class="works__list-img">
         </a>
         <h2 class="memorandum">
-          シバタノ備忘録
+          <img src="img/シバタノ備忘録ロゴ.webp" alt="シバタノ備忘録" class="works__shibata-logo">
         </h2>
         <dl class="works__dl">
           <dt class="works__dt">概要</dt>
@@ -497,7 +498,7 @@
               <li>映画</li>
               <li>ロードバイク</li>
               <li>カメラ</li>
-              <li>インテリア</li>
+              <li>3dプリンター</li>
               <li>一人暮らしtips</li>
               <li>その他随筆</li>
             </ul>
