--- a/index.html
+++ b/index.html
@@ -224,16 +224,6 @@
         </div>
       </li>
       <li class="skill__list">
-        <img src="img/photoshop.webp" alt="Photoshop" class="skill__list-img">
-        <div>
-          <h2>Photoshop</h2>
-          <p>
-            趣味で写真加工をしている為、画像の加工や補正などの編集が可能です。<br>
-            このサイトのロゴタイプもPhotoshopで制作しました。
-          </p>
-        </div>
-      </li>
-      <li class="skill__list">
         <img src="img/responsive.webp" alt="responsivedesign" class="skill__list-img">
         <div>
           <h2>Responsive</h2>
@@ -244,8 +234,37 @@
         <img src="img/photo-movie.webp" alt="camera" class="skill__list-img">
         <div>
           <h2>Photo/Movie</h2>
-          <p>写真撮影を趣味としている為、簡単なレタッチが可能です。<br>
-            また、友人の結婚式用の動画制作を何度か経験しており、納期を意識した動画編集も可能です。</p>
+          <p>写真撮影を趣味としている為、撮影と簡単なレタッチが可能です。<br>
+            また、動画の撮影や編集、ドローンの操縦経験もあります。</p>
+        </div>
+      </li>
+      <li class="skill__list">
+        <img src="img/photoshop.webp" alt="Photoshop" class="skill__list-img">
+        <div>
+          <h2>Photoshop</h2>
+          <p>
+            趣味で写真加工をしている為、画像の加工や補正などの編集が可能です。<br>
+            このサイトのロゴタイプもPhotoshopで制作しました。
+          </p>
+        </div>
+      </li>
+      <li class="skill__list">
+        <img src="img/aftereffect.webp" alt="AfterEffects" class="skill__list-img">
+        <div>
+          <h2>AfterEffects</h2>
+          <p>
+            友人の結婚式用の動画制作の為に勉強しました。<br>
+            jsを学んでいた為エクスプレッションの使用も可能です。
+          </p>
+        </div>
+      </li>
+      <li class="skill__list">
+        <img src="img/Fusion360.webp" alt="Fusion360" class="skill__list-img">
+        <div>
+          <h2>Fusion360</h2>
+          <p>
+            3dプリンターで色々と作る事があるので3dモデリングがある程度できます。
+          </p>
         </div>
       </li>
       <li class="skill__list">
@@ -470,7 +489,7 @@
       </li>
       <li class="works__list">
         <a href="https://www.shibatano.jp/">
-          <img src="img/シバタノ備忘録.webp" alt="" class="works__list-img">
+          <img src="img/シバタノ備忘録(スクショ)950.webp" alt="" class="works__list-img">
         </a>
         <h2 class="memorandum">
           <img src="img/シバタノ備忘録ロゴ.webp" alt="シバタノ備忘録" class="works__shibata-logo">
